# pydiffuser

./: .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  release-drafter-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-drafter.yml
docs/features/configs/: config.json
pydiffuser/: __init__.py  exceptions.py  logger.py  typing.py
pydiffuser/_cli/: cli.py  cli_utils.py
pydiffuser/mech/: constants.py  fields.py
pydiffuser/models/: __init__.py  abp.py  aoup.py  bm.py  levy.py  mips.py  rtp.py  smoluchowski.py  vicsek.py
pydiffuser/models/core/: __init__.py  base.py  ctrw.py  sde.py
pydiffuser/tracer/: __init__.py  component.py  ensemble.py  trajectory.py
pydiffuser/utils/: __init__.py  config.py  helpers.py  jitted.py  random.py  utils.py
tests/: conftest.py
tests/models/: test_bm.py  test_models.py
tests/tracer/: test_ensemble.py
tests/utils/: test_jitted.py
